Fixed pagination issue in build partner and real estate assets